crates/test-ui/ui/msg_send_id_no_return_type.stderr
error[E0282]: type annotations needed
 --> ui/msg_send_id_no_return_type.rs
  |
  |     unsafe { msg_send_id![NSObject::class(), new] };
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider giving `result` an explicit type
 --> $WORKSPACE/crates/objc2/src/macros.rs
  |
  |         let result: /* Type */;
  |                   ++++++++++++
